--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby-link": "^1.6.39",
     "gatsby-plugin-google-analytics": "^1.0.22",
     "gatsby-plugin-google-fonts": "0.0.4",
+    "gatsby-plugin-nprogress": "^1.0.14",
     "gatsby-plugin-react-helmet": "^2.0.7",
     "gatsby-plugin-sass": "^1.0.21",
     "gatsby-plugin-sharp": "^1.6.41",
