--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-transformer-sharp": "^1.6.22",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
+    "react-burger-menu": "^2.3.0",
     "react-dom": "^16.2.0",
     "react-helmet": "^5.2.0"
   },
