typekit add, menu formatted

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-bootstrap": "^0.32.1",
     "react-burger-menu": "^2.3.0",
     "react-dom": "^16.2.0",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "webfontloader": "^1.6.28"
   },
   "keywords": [
     "wild drop"
