--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-sharp": "^1.6.41",
     "gatsby-source-filesystem": "^1.5.27",
     "gatsby-transformer-sharp": "^1.6.22",
+    "google-map-react": "^0.34.0",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
     "react-burger-menu": "^2.3.0",
