--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-plugin-sass": "^1.0.21",
     "gatsby-plugin-sharp": "^1.6.41",
     "gatsby-source-filesystem": "^1.5.27",
+    "gatsby-transformer-remark": "^1.7.39",
     "gatsby-transformer-sharp": "^1.6.22",
     "google-map-react": "^0.34.0",
     "react": "^16.2.0",
@@ -21,6 +22,8 @@
     "react-burger-menu": "^2.3.0",
     "react-dom": "^16.2.0",
     "react-helmet": "^5.2.0",
+    "react-slick": "^0.22.3",
+    "slick-carousel": "^1.8.1",
     "webfontloader": "^1.6.28"
   },
   "keywords": [
