--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "gatsby-transformer-remark": "^1.7.39",
     "gatsby-transformer-sharp": "^1.6.22",
     "google-map-react": "^0.34.0",
+    "googlemaps": "^1.12.0",
+    "jquery": "^3.3.1",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
     "react-burger-menu": "^2.3.0",
     "react-dom": "^16.2.0",
+    "react-grid-layout": "^0.16.6",
     "react-helmet": "^5.2.0",
     "react-slick": "^0.22.3",
     "slick-carousel": "^1.8.1",
